fix(searchbar): fix styling on mobile screen

--- a/src/resources/elements/searchbar/searchbar.scss
+++ b/src/resources/elements/searchbar/searchbar.scss
@@ -16,8 +16,8 @@ form.search-form {
     appearance: none;
     background-color: white;
     border-top: 0px;
+    max-width: 80%;
     border-right: 0px;
-    max-width: 20em;
     border-left: 0px;
     box-shadow: none;
     border-radius: 0px;
